--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,9 +4,41 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=305,77
-Size=550,680
+Pos=179,33
+Size=448,475
+Collapsed=0
+
+[Window][Something else]
+Pos=0,19
+Size=1920,998
+Collapsed=0
+DockId=0xF442860A,0
+
+[Window][DockSpace Demo]
+Size=800,600
+Collapsed=0
+
+[Window][DockSpace]
+Size=800,600
+Collapsed=0
+
+[Window][Hello]
+ViewportPos=931,265
+ViewportId=0xF7D18982
+Size=492,396
+Collapsed=0
+
+[Window][InvisibleWindow]
+Pos=0,0
+Size=1920,1017
+Collapsed=0
+
+[Window][Test]
+ViewportPos=1043,241
+ViewportId=0x784DD132
+Size=465,346
 Collapsed=0
 
 [Docking][Data]
+DockSpace ID=0xF442860A Window=0xD8117908 Pos=0,42 Size=1920,998 CentralNode=1 Selected=0xEC3DFA02
 
