--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <ClInclude Include="Debug.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Timer.h" />
+    <ClInclude Include="UILayer.h" />
     <ClInclude Include="Renderer.h" />
   </ItemGroup>
   <ItemGroup>
