--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -9,10 +9,10 @@ Size=448,475
 Collapsed=0
 
 [Window][Something else]
-Pos=0,19
-Size=1920,998
+Pos=1512,19
+Size=408,998
 Collapsed=0
-DockId=0xF442860A,0
+DockId=0x00000002,0
 
 [Window][DockSpace Demo]
 Size=800,600
@@ -39,6 +39,26 @@ ViewportId=0x784DD132
 Size=465,346
 Collapsed=0
 
+[Window][Scene]
+Pos=0,19
+Size=803,650
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Scene view]
+Pos=0,19
+Size=800,581
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][SceneView]
+Pos=0,19
+Size=1510,998
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace ID=0xF442860A Window=0xD8117908 Pos=0,42 Size=1920,998 CentralNode=1 Selected=0xEC3DFA02
+DockSpace   ID=0xF442860A Window=0xD8117908 Pos=0,42 Size=1920,998 Split=X Selected=0x2A8FE092
+  DockNode  ID=0x00000001 Parent=0xF442860A SizeRef=1510,581 CentralNode=1 Selected=0x2A8FE092
+  DockNode  ID=0x00000002 Parent=0xF442860A SizeRef=408,581 Selected=0xEC3DFA02
 
