--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -9,10 +9,10 @@ Size=448,475
 Collapsed=0
 
 [Window][Something else]
-Pos=1512,19
-Size=408,998
+Pos=1701,19
+Size=219,998
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][DockSpace Demo]
 Size=800,600
@@ -43,22 +43,27 @@ Collapsed=0
 Pos=0,19
 Size=803,650
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Scene view]
 Pos=0,19
 Size=800,581
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][SceneView]
 Pos=0,19
-Size=1510,998
+Size=1699,998
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
+
+[Window][PerformanceView]
+Pos=19,48
+Size=219,499
+Collapsed=0
 
 [Docking][Data]
 DockSpace   ID=0xF442860A Window=0xD8117908 Pos=0,42 Size=1920,998 Split=X Selected=0x2A8FE092
-  DockNode  ID=0x00000001 Parent=0xF442860A SizeRef=1510,581 CentralNode=1 Selected=0x2A8FE092
-  DockNode  ID=0x00000002 Parent=0xF442860A SizeRef=408,581 Selected=0xEC3DFA02
+  DockNode  ID=0x00000003 Parent=0xF442860A SizeRef=579,581 CentralNode=1 Selected=0x2A8FE092
+  DockNode  ID=0x00000004 Parent=0xF442860A SizeRef=219,581 Selected=0xEC3DFA02
 
