--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -54,34 +54,34 @@ DockId=0x00000003,0
 
 [Window][SceneView]
 Pos=0,19
-Size=454,581
+Size=800,581
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][PerformanceView]
-Pos=456,401
-Size=344,199
+Pos=1576,675
+Size=344,342
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000008,1
 
 [Window][Hierarchy]
 Pos=456,19
-Size=344,380
+Size=344,581
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=456,401
-Size=344,199
+Pos=1576,675
+Size=344,342
 Collapsed=0
 DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace     ID=0xF442860A Window=0xD8117908 Pos=34,76 Size=800,581 Split=X Selected=0x2A8FE092
+DockSpace     ID=0xF442860A Window=0xD8117908 Pos=138,180 Size=800,581 Split=X Selected=0x2A8FE092
   DockNode    ID=0x00000001 Parent=0xF442860A SizeRef=1574,998 Split=X
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=579,581 CentralNode=1 Selected=0x2A8FE092
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=219,581 Selected=0xEC3DFA02
   DockNode    ID=0x00000002 Parent=0xF442860A SizeRef=344,998 Split=Y Selected=0x29EABFBD
-    DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=344,380 Selected=0x29EABFBD
+    DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=344,380 Selected=0x788BAA0D
     DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=344,199 Selected=0x199AB496
 
