--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1901,360
+ViewportPos=-466,537
 ViewportId=0xE927CF2F
-Size=448,471
+Size=445,426
 Collapsed=0
 
 [Window][Something else]
@@ -31,7 +31,7 @@ Collapsed=0
 
 [Window][InvisibleWindow]
 Pos=0,0
-Size=800,600
+Size=1920,1017
 Collapsed=0
 
 [Window][Test]
@@ -54,7 +54,7 @@ DockId=0x00000003,0
 
 [Window][SceneView]
 Pos=0,19
-Size=800,581
+Size=1574,998
 Collapsed=0
 DockId=0x00000003,0
 
@@ -65,8 +65,8 @@ Collapsed=0
 DockId=0x00000008,1
 
 [Window][Hierarchy]
-Pos=456,19
-Size=344,581
+Pos=1576,19
+Size=344,654
 Collapsed=0
 DockId=0x00000007,0
 
@@ -76,12 +76,17 @@ Size=344,342
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][New Object]
+Pos=267,141
+Size=288,161
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0xF442860A Window=0xD8117908 Pos=138,180 Size=800,581 Split=X Selected=0x2A8FE092
+DockSpace     ID=0xF442860A Window=0xD8117908 Pos=0,42 Size=1920,998 Split=X Selected=0x2A8FE092
   DockNode    ID=0x00000001 Parent=0xF442860A SizeRef=1574,998 Split=X
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=579,581 CentralNode=1 Selected=0x2A8FE092
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=219,581 Selected=0xEC3DFA02
   DockNode    ID=0x00000002 Parent=0xF442860A SizeRef=344,998 Split=Y Selected=0x29EABFBD
-    DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=344,380 Selected=0x788BAA0D
+    DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=344,380 Selected=0x29EABFBD
     DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=344,199 Selected=0x199AB496
 
