Updated a lot and moved from using header only files for some files.
NOTICE: Last working build before large rewrite of Engine.h and Renderer.h

--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2505,365
+ViewportPos=2394,345
 ViewportId=0xE927CF2F
 Size=445,426
 Collapsed=0
@@ -31,7 +31,7 @@ Collapsed=0
 
 [Window][InvisibleWindow]
 Pos=0,0
-Size=800,604
+Size=1920,1017
 Collapsed=0
 
 [Window][Test]
@@ -54,39 +54,46 @@ DockId=0x00000003,0
 
 [Window][SceneView]
 Pos=0,19
-Size=454,585
+Size=1458,998
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][PerformanceView]
-Pos=1576,675
-Size=344,342
+Pos=1460,675
+Size=460,342
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Hierarchy]
-Pos=456,19
-Size=344,383
+Pos=1460,19
+Size=460,654
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=456,404
-Size=344,200
+Pos=1460,675
+Size=460,342
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][New Object]
-Pos=267,141
+ViewportPos=163,59
+ViewportId=0x02E635E2
 Size=288,161
 Collapsed=0
 
+[Window][Dear ImGui Style Editor]
+ViewportPos=1071,112
+ViewportId=0x6D551092
+Size=722,902
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0xF442860A Window=0xD8117908 Pos=381,183 Size=800,585 Split=X Selected=0x2A8FE092
-  DockNode    ID=0x00000001 Parent=0xF442860A SizeRef=1574,998 Split=X
+DockSpace     ID=0xF442860A Window=0xD8117908 Pos=0,42 Size=1920,998 Split=X Selected=0x2A8FE092
+  DockNode    ID=0x00000001 Parent=0xF442860A SizeRef=1458,998 Split=X
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=579,581 CentralNode=1 Selected=0x2A8FE092
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=219,581 Selected=0xEC3DFA02
-  DockNode    ID=0x00000002 Parent=0xF442860A SizeRef=344,998 Split=Y Selected=0x29EABFBD
+  DockNode    ID=0x00000002 Parent=0xF442860A SizeRef=460,998 Split=Y Selected=0x29EABFBD
     DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=344,380 Selected=0x29EABFBD
     DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=344,199 Selected=0x199AB496
 
