--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -25,6 +25,7 @@
         <ClInclude Include="Graphics\Model.h" />
         <ClInclude Include="Graphics\Renderer.h" />
         <ClInclude Include="Graphics\Shader.h" />
+        <ClInclude Include="Scene\Scene.h" />
         <ClInclude Include="Util.h" />
         <ClInclude Include="Util\Debug.h" />
         <ClInclude Include="Util\Entity.h" />
@@ -39,6 +40,7 @@
         <ClCompile Include="Graphics\Model.cpp" />
         <ClCompile Include="Graphics\Renderer.cpp" />
         <ClCompile Include="Graphics\Shader.cpp" />
+        <ClCompile Include="Scene\Scene.cpp" />
         <ClCompile Include="Util\Entity.cpp" />
         <ClCompile Include="Util\UILayer.cpp" />
     </ItemGroup>
@@ -136,6 +138,7 @@
             <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
             <ConformanceMode>true</ConformanceMode>
             <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+            <LanguageStandard>stdcpp20</LanguageStandard>
         </ClCompile>
         <Link>
             <SubSystem>Windows</SubSystem>
