Mostly working build except for the UI isn't work right now

--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -59,8 +59,8 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][PerformanceView]
-Pos=1460,669
-Size=460,340
+Pos=340,19
+Size=460,581
 Collapsed=0
 DockId=0x00000008,1
 
@@ -86,6 +86,11 @@ Collapsed=0
 ViewportPos=1071,112
 ViewportId=0x6D551092
 Size=722,902
+Collapsed=0
+
+[Window][Testing performance]
+Pos=60,60
+Size=121,82
 Collapsed=0
 
 [Docking][Data]
